JDK-8168722 broke the build on macosx

XMLWordPrintable

    • b04
    • Verified

      jib > /scratch/mesos/slaves/9190d864-6621-4810-ba08-d8d8c75ba674-S30/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fb7e5a35-26d6-4703-b191-07c481b2ecd4/runs/4c854e3c-9cee-44ba-b428-20b46f0ba2a3/workspace/open/src/hotspot/share/logging/logOutput.cpp:121:70: error: sizeof on array function parameter will return size of 'LogTagType (*)[5]' instead of 'LogTagType [32][5]' [-Werror,-Wsizeof-array-argument]
      jib > assert((void*) subset >= result && (void*) subset < result + sizeof(result),
      jib > ^
      jib > /scratch/mesos/slaves/9190d864-6621-4810-ba08-d8d8c75ba674-S30/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fb7e5a35-26d6-4703-b191-07c481b2ecd4/runs/4c854e3c-9cee-44ba-b428-20b46f0ba2a3/workspace/open/src/hotspot/share/utilities/debug.hpp:55:33: note: expanded from macro 'assert'
      jib > #define assert(p, ...) vmassert(p, __VA_ARGS__)
      jib > ^
      jib > /scratch/mesos/slaves/9190d864-6621-4810-ba08-d8d8c75ba674-S30/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fb7e5a35-26d6-4703-b191-07c481b2ecd4/runs/4c854e3c-9cee-44ba-b428-20b46f0ba2a3/workspace/open/src/hotspot/share/utilities/debug.hpp:44:9: note: expanded from macro 'vmassert'
      jib > if (!(p)) { \
      jib > ^
      jib > /scratch/mesos/slaves/9190d864-6621-4810-ba08-d8d8c75ba674-S30/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fb7e5a35-26d6-4703-b191-07c481b2ecd4/runs/4c854e3c-9cee-44ba-b428-20b46f0ba2a3/workspace/open/src/hotspot/share/logging/logOutput.cpp:107:48: note: declared here
      jib > static void generate_all_subsets_of(LogTagType result[MaxSubsets][LogTag::MaxTags],
      jib > ^
      jib > 1 error generated.

            Assignee:
            Marcus Larsson (Inactive)
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: