8198887: JDK-8168722 broke the build on macosx

Reviewed-by: dholmes, thartmann